# ringbuffer

./: .drone.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  benchmark.sh  benchmarks.txt  codecov.yml
.github/workflows/: coverage.yml  rust.yml
benches/: bench.rs  comparison.rs
doc/: interface.md
src/: alloc.rs  conversions.rs  generic.rs  lib.rs  ringbuffer_trait.rs  set_len_trait.rs  with_alloc.rs  with_const_generics.rs  with_generic_array.rs  with_threads_alloc.rs  without_modulo.rs
src/with_alloc/: alloc_ringbuffer.rs  vecdeque.rs
tests/: compiletests.rs  conversions.rs
tests/compile-fail/: test_const_generic_array_zero_length_new.rs
