[package]
name = "ringbuffer"
version = "0.15.0"
authors = [
    "Vivian Roest <vivian@xirion.net>",
    "Jonathan Dönszelmann <jonabent@gmail.com>",
]
edition = "2021"
rust-version = "1.79"
description = "A fixed-size circular buffer"
repository = "https://github.com/NULLx76/ringbuffer/"
keywords = ["ring", "cyclic", "circular", "buffer", "no-std"]
categories = ["data-structures"]
license = "MIT"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
compiletest_rs = "0.10.0"

[features]
default = ["alloc"]
# disable the alloc based ringbuffer, to make RingBuffers work in no_alloc environments
alloc = []

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true
